[package]
name = "lambda_http_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", default-features = false }
bytes = "1.1.0"
futures = "0.3"
http = "1.0.0"
lambda_http = "0.9.0"
